feat: 중복 체크를 위한 Duplicate 메서드, TDA를 적용한 Discount 유효범위 검증 메서드 추가